Update personal description and tagline

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Andrew Nesbitt
 email: andrew@nesbitt.io
-description: >-
-  Andrew is a software developer, based in Somerset, UK.
-  He spends most of his days programming in Ruby, contributing to
-  open source projects and organising local developer user groups.
+tagline: Software Engineer and Package Management Nerd
+description: Package management and open source metadata expert. Building Ecosyste.ms, open datasets and tools for critical open source infrastructure.
 markdown: kramdown
 plugins:
   - jekyll-feed
