Add scheduled deployment for Jekyll site at 9am UTC daily

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -3,6 +3,8 @@ name: Deploy Jekyll site to Pages
 on:
   push:
     branches: ["master"]
+  schedule:
+    - cron: '0 9 * * *'  # 9am UTC daily
   workflow_dispatch:
 
 permissions:
