Add URL to site configuration in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Andrew Nesbitt
+url: https://nesbitt.io
 email: andrew@nesbitt.io
 tagline: Software Engineer and Package Management Nerd
 description: Package management and open source metadata expert. Building Ecosyste.ms, open datasets and tools for critical open source infrastructure.
