Update email and author information in configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 title: Andrew Nesbitt
 url: https://nesbitt.io
-email: andrew@nesbitt.io
+email: andrew@ecosyste.ms
+author:
+  name: Andrew Nesbitt
+  email: andrew@ecosyste.ms
 tagline: Software Engineer and Package Management Nerd
 description: Package management and open source metadata expert. Building Ecosyste.ms, open datasets and tools for critical open source infrastructure.
 markdown: kramdown
