--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -5,13 +5,24 @@ on:
     - cron: '0 6 * * *'
   workflow_dispatch:
 
+permissions: {}
+
+concurrency:
+  group: update-readme
+  cancel-in-progress: true
+
 jobs:
   update:
+    name: Update README
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # push changes
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        with:
+          persist-credentials: false
 
-      - uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@ae195bbe749a7cef685ac729197124a48305c1cb # v1
         with:
           ruby-version: '3.4'
 
@@ -19,7 +30,14 @@ jobs:
         run: rake readme
 
       - name: Commit changes
+        env:
+          GH_TOKEN: ${{ github.token }}
+          REPO: ${{ github.repository }}
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
-          git diff --quiet || (git add README.md && git commit -m 'Update README with recent posts' && git push)
+          if ! git diff --quiet; then
+            git add README.md
+            git commit -m 'Update README with recent posts'
+            git push "https://x-access-token:${GH_TOKEN}@github.com/${REPO}" HEAD
+          fi
