add social media image

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ author:
   email: andrew@ecosyste.ms
 tagline: Software Engineer and Package Management Nerd
 description: Package management and open source metadata expert. Building Ecosyste.ms, open datasets and tools for critical open source infrastructure.
+image: /images/boxes.png
 markdown: kramdown
 plugins:
   - jekyll-feed
