Update GitHub Actions workflows to remove version comments and set Ruby version

--- a/.github/workflows/update_projects.yml
+++ b/.github/workflows/update_projects.yml
@@ -18,11 +18,11 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 
         with:
           persist-credentials: false
 
-      - uses: ruby/setup-ruby@ae195bbe749a7cef685ac729197124a48305c1cb # v1
+      - uses: ruby/setup-ruby@ae195bbe749a7cef685ac729197124a48305c1cb 
         with:
           ruby-version: '3.4'
 
